lots of stuff 🐰

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,16 @@
-DATABASE_URL=local.db
+# Environment
+NODE_ENV=development
+
+# Database
+DATABASE_URL=file:local.db
+
+# Server
+PORT=5173
+HOST=localhost
+ORIGIN=http://localhost:5173
+
+# Add other environment variables as needed
+# SMTP_HOST=
+# SMTP_PORT=
+# SMTP_USER=
+# SMTP_PASS=
