--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "better-sqlite3": "^11.8.0",
     "daisyui": "^5.0.46",
     "drizzle-orm": "^0.40.0",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "zod": "^4.0.10"
   }
 }
